Set up site structure

--- a/client/defaultFooter.html
+++ b/client/defaultFooter.html
@@ -1,8 +1,10 @@
 <template name="defaultFooter">
 	<br />
-	<div class ="madewith pull-right">
-		Made with &nbsp;
-		<img class="footer-img" src ="Meteor-logo.png" alt ="" />
+	<div class="container">
+		<div class ="madewith pull-right">
+			Made with &nbsp;
+			<img class="footer-img" src ="Meteor-logo.png" alt ="" />
+		</div>
 	</div>
 	<br />
 </template>
