--- a/client/contact.html
+++ b/client/contact.html
@@ -1,10 +1,10 @@
-<template name="about">
+<template name="contact">
 
 	<div class="container">
 
 		<div class="row">
 
-			<h1>About Template</h1>
+			<h1>Contact Template</h1>
 
 			<div class="col-sm-12 col-md-6 col-lg-4">
 				<h2>Column 1</h2>
