--- a/client/navbar.html
+++ b/client/navbar.html
@@ -11,15 +11,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Patrick Berry</a>
+              <a class="navbar-brand" href="/">Patrick Berry</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Interests</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About</a></li>
+                <li class="{{checkActiveMenuItem 'home'}}">
+                  <a href="/">Home</a>
+                </li>
+                <li class="{{checkActiveMenuItem 'resume'}}">
+                  <a href="/resume">Resume</a>
+                </li>
+                <li class="{{checkActiveMenuItem 'interests'}}">
+                  <a href="/interests">Interests</a>
+                </li>
+                <li class="{{checkActiveMenuItem 'contact'}}">
+                  <a href="/contact">Contact</a>
+                </li>
+                <li class="{{checkActiveMenuItem 'about'}}">
+                  <a href="/about">About</a>
+                </li>
               </ul>
             </div>
           </div>
