Added page content for contact and about. Commenced home

--- a/client/about.html
+++ b/client/about.html
@@ -4,31 +4,35 @@
 
 		<div class="row">
 
-			<h1>About Template</h1>
-
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>				
+			<div class="col-md-2 col-lg-2">
+				<h2>About:</h2>
 			</div>
 
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
+			<div class="col-md-8 col-lg-8">
+{{#markdown}}
+This is the personal website of Patrick Berry. 
+
+Father of three school aged children and step father to one independent young adult.
+
+l am a Professional Engineer with 25 years of experience across a number of industries.
+
+l currently live, in Sydney Australia but have previously lived permanently in Melbourne (Australia), Helsinki (Finland), Durban (Republic of South Africa) and Albury (Australia).
+
+During my career l have had short term work assignments (several months) in the following locations,
+
+* Portugal
+* France (Rouen)
+* Canada (Port Hastings, Nova Scotia)
+
+The purpose of this website is to
+
+* Become more familiar with the technologies and tools used in content management systems
+* Publish my CV
+* Share some thoughts on engineering, software and other random subjects
+{{/markdown}}
 			</div>
 
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
-			</div>
+			<div class="col-md-2 col-lg-2"></div>
 
 		</div>
 	</div>
