--- a/client/contact.html
+++ b/client/contact.html
@@ -1,34 +1,48 @@
 <template name="contact">
 
+	
 	<div class="container">
 
 		<div class="row">
 
-			<h1>Contact Template</h1>
-
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>				
+			<div class="col-md-2 col-lg-2">
+				<h2>Contact:</h2>
 			</div>
 
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+			<div class="col-md-8 col-lg-8">
+				
+				<p>
+					Feel free to contact me about any of the content of this site by email, 
+					<a href="mailto:patrickcberry@gmail.com" target="_top">patrickcberry@gmail.com</a>
 				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
+
+				<p>
+					While not a huge user of social media, I do have accounts on the following services,
+				</p>
+
+				<a class="btn btn-social-icon btn-linkedin" href="https://au.linkedin.com/in/patrickcberry" target="_blank">
+					<span class="fa fa-linkedin">
+					</span>
+				</a>
+
+				<a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/patrickcberry" target="_blank">
+					<span class="fa fa-facebook">
+					</span>
+				</a>
+
+				<a class="btn btn-social-icon btn-github" href="https://github.com/patrickcberry" target="_blank">
+					<span class="fa fa-github">
+					</span>
+				</a>
+
+				<a class="btn btn-social-icon btn-google" href="https://plus.google.com/115274262613458301126" target="_blank">
+					<span class="fa fa-google">
+					</span>
+				</a>
+
 			</div>
 
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
-			</div>
+			<div class="col-md-2 col-lg-2"></div>
 
 		</div>
 	</div>
