--- a/client/home.html
+++ b/client/home.html
@@ -1,36 +1,28 @@
 <template name="home">
-
 	<div class="container">
-
+		<h2>Personal website and interactive résumé of Patrick Berry</h2>
+		<br />
 		<div class="row">
-
-			<h1>Home Template</h1>
-
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 1</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>				
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<img src="gen-w-1.jpg" width="100%" height="150px">
+				<h3>Title 1</h3>
+				<p>Subtile for item 1</p>
 			</div>
-
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<img src="gen-w-1.jpg" width="100%" height="150px">
+				<h3>Title 2</h3>
+				<p>Subtile for item 2</p>
 			</div>
-
-			<div class="col-sm-12 col-md-6 col-lg-4">
-				<h2>Column 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-				</p>								
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<img src="gen-w-1.jpg" width="100%" height="150px">
+				<h3>Title 3</h3>
+				<p>Subtile for item 3</p>
 			</div>
-
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<img src="gen-w-1.jpg" width="100%" height="150px">
+				<h3>Title 4</h3>
+				<p>Subtile for item 4</p>
+			</div>
 		</div>
 	</div>
-
 </template>
