Set up resume structure

--- a/client/navbar.html
+++ b/client/navbar.html
@@ -21,8 +21,9 @@
                 <li class="{{checkActiveMenuItem 'resume'}}">
                   <a href="/resume">Resume</a>
                 </li>
-                <li class="{{checkActiveMenuItem 'interests'}}">
-                  <a href="/interests">Interests</a>
+                <li class="{{checkActiveMenuItem 'interests'}} disabled">
+                  <!--<a href="/interests">Interests</a>-->
+                  <a href="#">Interests</a>
                 </li>
                 <li class="{{checkActiveMenuItem 'contact'}}">
                   <a href="/contact">Contact</a>
