--- a/client/resume/resumeLayout.html
+++ b/client/resume/resumeLayout.html
@@ -2,25 +2,31 @@
 	
 	{{> navbar}}
 	
-	<div class="container page-content">
+	<div class="container-resume page-content">
 
-		<h1>Resume Template</h1>
-
-		<div class="col-lg-4 col-md-2 col-sm-12">
+		<div class="col-lg-2 col-md-2 col-sm-12">
 			{{> yield "sidebar"}}
 		</div>
 
-		<div class="col-lg-4 col-md-5 col-sm-12">
-			<h1>Column 1</h1>
-			{{> yield "left"}}
-		</div>
+		<div class="col-lg-10 col-md-10 col-sm-12">
 
-		<div class="col-lg-4 col-md-5 col-sm-12">
-			<h1>Column 2</h1>
-			{{> yield "right"}}
-		</div>
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12">
+					{{> yield "left"}}
+				</div>
 
-		{{> yield "footer"}}
+				<div class="col-lg-6 col-md-6 col-sm-12">
+					{{> yield "right"}}
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					{{> yield "full"}}
+				</div>
+			</div>
+
+		</div>
 
 	</div>
 	
