--- a/client/resume/sidebar.html
+++ b/client/resume/sidebar.html
@@ -32,15 +32,16 @@
 		<ul class="nav nav-pills nav-stacked">
 			<li role="presentation" class="{{checkActiveMenuItem 'summary'}}"><a href="/resume">Summary & Objectives</a></li>
 			<li role="presentation" class="{{checkActiveMenuItem 'capabilities'}}"><a href="/resume/capabilities">Capabilities</a></li>
-			<li role="presentation" class="disabled"><a href="#">Achievements</a></li>
-			<li role="presentation" class="disabled"><a href="#">Specialities</a></li>
-			<li role="presentation" class="disabled"><a href="#">Key Positions</a></li>
-			<li role="presentation" class="disabled"><a href="#">Employment History</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'achievements'}}"><a href="/resume/achievements">Achievements</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'specialities'}}"><a href="/resume/specialities">Specialities</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'keypositions'}}"><a href="/resume/keypositions">Key Positions</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'history'}}"><a href="/resume/history">Employment History</a></li>
+			<li role="presentation" class="disabled"><a href="#">Employers</a></li>
 			<li role="presentation" class="disabled"><a href="#">Projects</a></li>
 			<li role="presentation" class="disabled"><a href="#">Expereince</a></li>
 			<li role="presentation" class="disabled"><a href="#">Skills</a></li>
-			<li role="presentation" class="disabled"><a href="#">Qualifications & Certifications</a></li>
-			<li role="presentation" class="disabled"><a href="#">Training</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'qualifications'}}"><a href="/resume/qualifications">Qualifications & Certifications</a></li>
+			<li role="presentation" class="{{checkActiveMenuItem 'training'}}"><a href="/resume/training">Training</a></li>
 			<li role="presentation" class="disabled"><a href="#">Locations</a></li>
 			<li role="presentation" class="disabled"><a href="#">Clients</a></li>
 		</ul>
